[package]
edition = "2021"
name = "stitch_bindings"
version = "0.1.26"

[lib]
crate-type = ["cdylib"]
name = "stitch_core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.0"}
pyo3 = {version = "0.17.3", features = ["extension-module"]}
# stitch_core = {path = "../stitch"}
stitch_core = {git = "https://github.com/andreyz4k/stitch", branch = "main"}

[build-dependencies]
pyo3-build-config = "0.17.3"
